--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* General Styles */
 body {
     margin: 0;
-    font-family: 'Poppins', Arial, sans-serif; /* Applying Poppins font */
-    background-color: #000; /* Dark background */
-    color: #FFD700; /* Yellow text */
+    font-family: 'Poppins', Arial, sans-serif; /* Poppins font */
+    background-color: #000; /* Dark bg */
+    color: #FFD700; 
     overflow-x: hidden;
   }
   
@@ -17,13 +17,13 @@ body {
   header h1 {
     margin: 0;
     font-size: 2.5rem;
-    font-weight: 600; /* Bold style for Poppins */
+    font-weight: 600; /* Poppins */
   }
   
   header p {
     margin: 0;
     font-size: 1.2rem;
-    font-weight: 300; /* Lighter style for contrast */
+    font-weight: 300;
   }
   
   /* Gallery Styles */
@@ -36,18 +36,17 @@ body {
   
   .gallery img {
     width: 100%;
-    height: auto;
-    border: 4px solid #ffeaf0; /* Burgundy border */
+    height: 80%;
+    border: 4px solid #ffeaf0;
     border-radius: 2px;
     transition: transform 0.3s ease, border-color 0.3s ease;
   }
   
   .gallery img:hover {
     transform: scale(1.05);
-    border-color: #FF7F50; /* Orange on hover */
+    border-color: #FF7F50; 
   }
   
-  /* Modal Styles */
   .modal {
     position: fixed;
     top: 0;
@@ -59,14 +58,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #D2B48C; /* Teak Wood Smoky */
+    color: #D2B48C;
     z-index: 1000;
   }
   
   .modal img {
     max-width: 90%;
-    max-height: 70%;
-    border: 5px solid #FFD700; /* Yellow border */
+    max-height: 80%;
+    border: 5px solid #FFD700;
     border-radius: 15px;
   }
   
@@ -75,14 +74,14 @@ body {
     top: 20px;
     right: 20px;
     font-size: 2rem;
-    color: #FF7F50; /* Orange */
+    color: #FF7F50;
     cursor: pointer;
   }
   
   #modal-details {
     text-align: center;
     margin-top: 20px;
-    font-weight: 400; /* Regular weight for modal details */
+    font-weight: 400;
   }
   
   .hidden {
@@ -93,7 +92,8 @@ body {
   footer {
     text-align: center;
     padding: 10px;
-    background-color: #800020; /* Burgundy */
+    background-color: #800020;
     color: #FFFFFF;
   }
+
   
